# wallpaper-ng

./: .envrc  Cargo.toml  manifest.scm  readme.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: error.rs  from_url.rs  lib.rs  macos.rs  unix.rs  unsupported.rs  windows.rs
src/linux/: gnome.rs  kde.rs  lxde.rs  mod.rs  xfce.rs
